--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -177,7 +177,7 @@ Antoine McCord:
     date: '2025-03-11'
     event: New CIO Antoine McCord arrives at DHS, reportedly with affiliates of DOGE
     name: Antoine McCord
-    source: https://www.nextgov.com/people/2025/03/dhs-taps-antoine-mccord-top-tech-post/403727/?oref=ng-homepage-river
+    source: https://www.nextgov.com/people/2025/03/dhs-taps-antoine-mccord-top-tech-post/403727/
 
 Antonio Gracias:
   agencies:
@@ -189,6 +189,11 @@ Antonio Gracias:
     event: Wired reports that 10 DOGE staffer - Akash Bobba, Scott Coulter, Marko Elez, Luke Farritor, Antonio Gracias, Gautier Cole Killian, Jon Koval, Nikhil Rajpal, Payton Rehling, and Ethan Shaotran - are showing up in the Microsoft Teams directory at SSA
     name: Antonio Gracias
     source: https://www.wired.com/story/doge-operatives-access-social-security-administration/
+  - agency: Social Security Administration
+    date: '2025-03-30'
+    event: At a town hall event in Wisconsin, Elon Musk and Antonio Gracias claim to have found fraud in the number of immigrants being granted social security numbers
+    name: Antonio Gracias
+    source: https://www.washingtonpost.com/politics/2025/04/01/elon-musk-social-security-immigrants/
 
 Aram Moghaddassi:
   agencies:
@@ -538,6 +543,7 @@ Elon Musk:
   - Department of Labor
   - Federal Aviation Administration
   - National Security Agency
+  - Social Security Administration
   - US Digital Service/Department of Government Efficiency
   events:
   - agency: Department of Labor
@@ -586,6 +592,11 @@ Elon Musk:
     event: Elon Musk and 6 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy Gleason did not appear.
     name: Elon Musk
     source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
+  - agency: Social Security Administration
+    date: '2025-03-30'
+    event: At a town hall event in Wisconsin, Elon Musk and Antonio Gracias claim to have found fraud in the number of immigrants being granted social security numbers
+    name: Elon Musk
+    source: https://www.washingtonpost.com/politics/2025/04/01/elon-musk-social-security-immigrants/
   - agency: Central Intelligence Agency
     date: '2025-03-31'
     event: Elon Musk visits the CIA at the invitation of its director, John Ratcliffe
